sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:13: error: not found: value a
     while(!plusPetitQue(i-a, temp)){
                           ^AlgInsertionSort:14: error: not found: value a
      copie(i-a, i-a+1);
              ^AlgInsertionSort:14: error: not found: value a
      copie(i-a, i-a+1);
                   ^AlgInsertionSort:15: error: not found: value a
      a=a+1;
      ^AlgInsertionSort:17: error: not found: value a
    setValeur(i-a, temp);
                ^